--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,3 @@
-<app-product-list *ngFor="let product of products" [product]="product"></app-product-list>
+<div class="d-flex flex-wrap">
+    <app-product-list *ngFor="let product of products" [product]="product" class="col-md-4 p-4 my-3"></app-product-list>
+</div>
