--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,17 @@
 <img src="{{product.url}}" alt="{{product.name}}" width="100%">
-<div>{{product.name}}</div>
-<div>{{product.price}}</div>
+<div class="my-3">{{product.name}} <span class="ml-2 font-weight-bold">${{product.price}}</span></div>
+<form (ngSubmit)="addCart(product)">
+    <select name="amount" [(ngModel)]="amount" class="mb-3">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
+    <button class="btn btn-primary d-block">add to cart</button>
+</form>
